Implement CONVERT_TZ. Cannot handle null return at the moment.
Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>